@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-25T02:03:26Z",
-  "count" : 352,
+  "timestamp" : "2022-06-07T01:58:26Z",
+  "count" : 292,
   "count_minmax" : [ 121, 352 ],
-  "count_decinc" : [ -0, +352 ],
+  "count_decinc" : [ -60, +352 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
