@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-06T16:34:30Z",
-  "count" : 247,
-  "count_minmax" : [ 28, 247 ],
-  "count_decinc" : [ -0, +247 ],
+  "timestamp" : "2022-06-07T01:58:26Z",
+  "count" : 353,
+  "count_minmax" : [ 28, 353 ],
+  "count_decinc" : [ -0, +353 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
