@@ -1,15 +1,10 @@
 {
-  "count": 4896,
+  "count": 4885,
   "uniques": 12,
   "clones": [
     {
-      "timestamp": "2022-05-23T00:00:00Z",
-      "count": 57,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-05-24T00:00:00Z",
-      "count": 352,
+      "count": 292,
       "uniques": 1
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-06-06T00:00:00Z",
-      "count": 247,
+      "count": 353,
       "uniques": 2
     }
   ]
