@@ -1,3 +1,10 @@
+2022-06-07T01:58:26Z:
+* notice: last 14d: unq all: 12 4885
+* notice: prev accum: outdated-unq outdated-all / unq all: 595 25507 / 630 30403
+* notice: next accum: outdated-unq outdated-all / unq all: 596 25858 / 630 30743
+* notice: prev exec diff / last date diff / accum: unq all: +0 +106 -0 -60 / +2 +353 -0 -0 / 2 353
+* notice: removed / changed dates: [2022-05-23] / [2022-05-24 2022-06-06]
+
 2022-06-06T16:34:30Z:
 * notice: last 14d: unq all: 12 4896
 * notice: prev accum: outdated-unq outdated-all / unq all: 595 25507 / 630 30402
